Fix ArrayMode nodes after r261260 https://bugs.webkit.org/show_bug.cgi?id=211543

Reviewed by Yusuke Suzuki.

I accidentally ran tests with a release build rather than
release+assert when uploading r261260. This patch skips the
CheckArray node in the ArrayMode clobbersTop() logic before
Fixup. And also marks a GetArrayLength in the TypedArray
intrsinics as ExitOK.

This patch also relands r261260.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleIntrinsicGetter):
* dfg/DFGClobberize.h:
(JSC::DFG::clobberize):

Canonical link: https://commits.webkit.org/224479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261313 268f45cc-cd09-0410-ab3c-d52691b4dbfc